# dig-dns

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md  SPEC.md
.github/workflows/: build-binaries.yml  ci.yml  nightly-release.yml  release.yml
packaging/linux/: net.dignetwork.dig-dns.service  postinst  postrm  prerm
packaging/macos/: net.dignetwork.dig-dns.plist  uninstall.sh
packaging/macos/scripts/: postinstall  preinstall
runbooks/: dig-dns.md  release.md
scripts/: acceptance-unix.sh  acceptance-windows.ps1  gateway-acceptance.sh
src/: cli.rs  config.rs  content.rs  dig_local.rs  dns.rs  doctor.rs  gateway.rs  host.rs  label.rs  lib.rs  main.rs  node.rs  os_config.rs  pac.rs  packaging.rs  secure_dns.rs  server.rs  service.rs  service_run.rs  state.rs  system_tool.rs  transport.rs  win_service.rs
tests/: dig_local_proxy.rs  digd_alias.rs  dns_responder.rs  doctor_live.rs  gateway_stub_node.rs  nightly_release_workflow_shape.rs  release_publishes_digd.rs  service_runtime_state.rs  wix_manifest_wellformed.rs
wix/: main.wxs
